# TriggerGit

./: Jenkinsfile  docker-compose.yml  index1234.html  jenkinsfile  pyproject.toml
Dockerfile/: drupal.Dockerfile
server/: __init__.py
sever/: app.py
src/: index.js
tests/: test_server.py
