[tool.poetry]
name = "flask-docker"
version = "0.1.0"
description = "A simple Flask application"
authors = ["Nam <dhtn8xx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.4"
gunicorn = "^20.1.0"
jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
